erDiagram
    CREW_MEMBERS {
        string id PK
        string crew_id
        string full_name
        string department
        string certificate_number
        datetime certificate_issue
        datetime certificate_expiry
        datetime medical_issue
        datetime medical_expiry
        datetime date_of_birth
        datetime join_date
        datetime embark_date
        boolean is_onboard
        string email_address
        string phone_number
        datetime created_at
    }
    CREW_CERTIFICATES {
        int id PK
        string crew_member_id FK
        int certificate_id FK
        string certificate_number
        datetime issue_date
        datetime expiry_date
        boolean is_synced
    }
    SEAFARER_DOCUMENTS {
        string id PK
        string document_type
        string document_number
        datetime issue_date
        datetime expiry_date
        int country_id
        string file_url
        string crew_member_id FK
    }
    SERVICE_RECORDS {
        string id PK
        string crew_member_id FK
        string vessel_name
        string vessel_flag
        float vessel_grt
        float vessel_dwt
        datetime created_at
    }
    VOYAGE_CREW_ASSIGNMENTS {
        string id PK
        string voyage_id FK
        string crew_member_id FK
        int rank_id
        string role
        string embark_port_code
        datetime embark_date
        string status
    }

    CREW_MEMBERS ||--o{ CREW_CERTIFICATES : "has"
    CREW_MEMBERS ||--o{ SEAFARER_DOCUMENTS : "owns"
    CREW_MEMBERS ||--o{ SERVICE_RECORDS : "record"
    CREW_MEMBERS ||--o{ VOYAGE_CREW_ASSIGNMENTS : "assigned"
